# django-crm

./: .gitignore  Procfile  README.md  base.xlsx  db.sqlite3  dev.Dockerfile  docker-compose-dev.yml  entrypoint.sh  exel_test.py  manage.py  pyproject.toml  requirements.txt  Защита.pptx
.envs/.example/: django.env  nginx.env  telegram.env
.run/: CDAB Development.run.xml
app/: admin.py  forms.py  models.py  urls.py  views.py
app/bot/: bot_handler.py  bot_utils.py  command_utils.py  jobs_utils.py  keyboards.py  register_profile.py
app/migrations/: 0001_initial.py  0002_auto_20210405_1610.py  0003_auto_20210405_1625.py  0004_auto_20210405_2112.py  0005_auto_20210405_2113.py  0006_user_telegram_login.py  0007_auto_20210405_2120.py  0008_auto_20210405_2218.py  0009_auto_20210405_2333.py  0010_remove_user_telegram.py  0011_masterrequest.py  0012_auto_20210407_2156.py  0013_auto_20210407_2157.py  0014_auto_20210407_2158.py  0015_auto_20210407_2247.py  0016_auto_20210408_2142.py  0017_auto_20210408_2158.py  0018_auto_20210408_2203.py  0019_auto_20210408_2244.py  0020_order_master_request.py  0021_auto_20210408_2251.py  0022_remove_order_master_requests.py  0023_order_is_waiting_for_master.py  0024_auto_20210408_2312.py  0025_auto_20210409_0001.py  (+40 more)
crm/: asgi.py  settings.py  urls.py  wsgi.py
crm/settings/: base.py
server-confs/: staticfiles.conf
templates/: base.html  index.html  login_form.html  master_delete.html  master_detail.html  master_list.html  order_create.html  order_delete.html  order_detail.html  order_list.html  profile_edit.html  spending_create.html
(+21 files in other folders)
